[package]
name = "play_deltalake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datafusion = "18.0.0"
deltalake = {version = "0.7.0", features=["datafusion"]}
tokio = { version = "1.17.0", features = ["full"] }